Added all content to tables in episodes section.

--- a/mainsite.html
+++ b/mainsite.html
@@ -23,8 +23,8 @@
                     <a href="#about-itachi">
                         <li>About</li>
                     </a>
-                    <a href="#appears">
-                        <li>Appears</li>
+                    <a href="#episodes">
+                        <li>Episodes</li>
                     </a>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
 
         <main>
             <section class="page" id="about-itachi">
-                <h1>About</h1>
+                <h1 class="page-title">About</h1>
                 <div class="video-card">
                     <div class="iframe-wrapper">
                         <iframe src="https://www.youtube.com/embed/oE3Ty5YRXiw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -113,7 +113,8 @@
                 </div>
             </section>
 
-            <section class="page" id="appears">
+            <section class="page" id="episodes">
+                <h1 class="page-title">Episodes</h1>
                 <div id="left-table-container">
                     <table>
                         <thead>
@@ -128,18 +129,20 @@
                         </thead>
                         <tbody>
                             <tr>
+                                <td>84</td>
                                 <td>85</td>
-                                <td>89</td>
                                 <td>Itachis first appearance in the Saga, infiltrating his home village</td>
                             </tr>
                             <tr>
-                                <td>113</td>
-                                <td>115</td>
-                                <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
+                                <td>107</td>
+                                <td>-</td>
+                                <td>Itachi is shown in a short memory flashback by Sasuke.</td>
                             </tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
+                            <tr>
+                                <td>129</td>
+                                <td>131</td>
+                                <td>Sasuke has a memory flashback of the night Itachi killed his entire clan as well as training with him as a young boy.</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -157,18 +160,60 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>85</td>
-                                <td>89</td>
-                                <td>Itachis first appearance in the Saga, infiltrating his home village</td>
+                                <td>12</td>
+                                <td>15</td>
+                                <td>On a mission, main character Naruto and his team end up meeting Itachi and face of.</td>
                             </tr>
                             <tr>
-                                <td>113</td>
-                                <td>115</td>
-                                <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
+                                <td>121</td>
+                                <td>-</td>
+                                <td>Itachi appears with his group of rogue ninja called the Akatsuki</td>
                             </tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
+                            <tr>
+                                <td>123</td>
+                                <td>124</td>
+                                <td>Itachi is shown in a memory flashback, displaying his awesome powers.</td>
+                            </tr>
+                            <tr>
+                                <td>134</td>
+                                <td>142</td>
+                                <td>Brothers Sasuke and Itachi finaly face each other in battle.</td>
+                            </tr>
+                            <tr>
+                                <td>152</td>
+                                <td>-</td>
+                                <td>Main character Naruto remembers a conversation with Itachi.</td>
+                            </tr>
+                            <tr>
+                                <td>209</td>
+                                <td>-</td>
+                                <td>The leader of Akatsuki tells Sasuke about the reasons for Itachi murdering the uchiha clan.</td>
+                            </tr>
+                            <tr>
+                                <td>298</td>
+                                <td>299</td>
+                                <td>Itachi is summoned from the dead and face main character Naruto.</td>
+                            </tr>
+                            <tr>
+                                <td>333</td>
+                                <td>335</td>
+                                <td>Itachi fight alongside each other in a battle against one of the main antagonists.</td>
+                            </tr>
+                            <tr>
+                                <td>337</td>
+                                <td>339</td>
+                                <td>Itachi shows his own memories to Sasuke in order to explain the motives behind his path in life.</td>
+                            </tr>
+                            <tr>
+                                <td>357</td>
+                                <td>359</td>
+                                <td>In a memory flashback, Itachis entrance into the ninja black ops organisation.</td>
+                            </tr>
+                            <tr>
+                                <td>451</td>
+                                <td>459</td>
+                                <td>Though a memory flashback by Sasuke, Itachis entire story is told.</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
