Added placeholder image to pseudo iframe in video-card.

--- a/mainsite.html
+++ b/mainsite.html
@@ -111,6 +111,20 @@
                         </p>
                     </div>
                 </div>
+                <div class="video-card">
+                    <div class="iframe-wrapper" id="pseudo-iframe">
+                    </div>
+                    <div class="about-textbox">
+                        <h1>
+                            ADD MORE?
+                        </h1>
+                        <p>
+                            Despite revealing his good intentions to the viewers, Itachi is still judged harshly by many.
+                            <br><br>
+                            Was he a dark knight bearing a painful burden for the sake of peace, or a selfish rogue only interested in himself and his younger brother?
+                        </p>
+                    </div>
+                </div>
             </section>
 
             <section class="page" id="episodes">
