Final touch up on design and layout, mainly based on lighthouse report. Corrected accesibility problem with a tags inside of li items instead of opposit way.

--- a/mainsite.html
+++ b/mainsite.html
@@ -17,15 +17,21 @@
             </div>
             <div id="nav-menu">
                 <ul>
-                    <a href="#intro">
-                        <li>Introduction</li>
-                    </a>
-                    <a href="#about-itachi">
-                        <li>About</li>
-                    </a>
-                    <a href="#episodes">
-                        <li>Episodes</li>
-                    </a>
+                    <li>
+                        <a href="#episodes">
+                            Episodes
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#about-itachi">
+                            About
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#intro">
+                            Introduction
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -50,7 +56,12 @@
 
         <main>
             <section class="page" id="about-itachi">
-                <h1 class="page-title">About</h1>
+                <div class="page-title-container">
+                    <div class="page-title">
+                        <h1>About</h1>
+                        <p>Learn more about Uchiha Itachi from the video material below.</p>
+                    </div>
+                </div>
                 <div class="video-card">
                     <div class="iframe-wrapper">
                         <iframe src="https://www.youtube.com/embed/oE3Ty5YRXiw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -128,7 +139,14 @@
             </section>
 
             <section class="page" id="episodes">
-                <h1 class="page-title">Episodes</h1>
+                <div class="page-title-container">
+                    <div class="page-title">
+                        <h1>Episodes</h1>
+                        <p>
+                            Check out the list below for episodes that Itachi appeared in.
+                        </p>
+                    </div>
+                </div>
                 <div id="left-table-container">
                     <table>
                         <thead>
