removed all inline frameborder attributes from iframes.

--- a/mainsite.html
+++ b/mainsite.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="video-card">
                     <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/oE3Ty5YRXiw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                        <iframe src="https://www.youtube.com/embed/oE3Ty5YRXiw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                     <div class="about-textbox">
                         <h1>
                             Naruto Anime
@@ -78,7 +78,7 @@
                 </div>
                 <div class="video-card">
                     <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/zhxtBW0HIbc?start=24" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                        <iframe src="https://www.youtube.com/embed/zhxtBW0HIbc?start=24" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                     <div class="about-textbox">
                         <h1>
                             ITACHIS STORY
@@ -92,7 +92,7 @@
                 </div>
                 <div class="video-card">
                     <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="about-textbox">
                         <h1>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="video-card">
                     <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="about-textbox">
                         <h1>
