touch up on styling based on jigsaw and w3c reports. Changed heading levels for better coherence and cleaned up obselete code.

--- a/mainsite.html
+++ b/mainsite.html
@@ -13,7 +13,9 @@
     <nav>
         <div id="nav-div">
             <div id="nav-logo">
-                <h1>UCHIHA ITACHI</h1>
+                <h1>
+                    UCHIHA ITACHI
+                </h1>
             </div>
             <div id="nav-menu">
                 <ul>
@@ -40,9 +42,9 @@
         <header class="page" id="intro">
             <div id="right">
                 <div id="textbox-right">
-                    <h1>
+                    <h2>
                         Background
-                    </h1>
+                    </h2>
                     <p>
                         Uchiha Itachi is a fictional character who appeared in the popular Manga and Anime series Naruto and Naruto Shippuden.
                         <br>
@@ -58,7 +60,7 @@
             <section class="page" id="about-itachi">
                 <div class="page-title-container">
                     <div class="page-title">
-                        <h1>About</h1>
+                        <h2>About</h2>
                         <p>Learn more about Uchiha Itachi from the video material below.</p>
                     </div>
                 </div>
@@ -66,9 +68,9 @@
                     <div class="iframe-wrapper">
                         <iframe src="https://www.youtube.com/embed/oE3Ty5YRXiw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                     <div class="about-textbox">
-                        <h1>
+                        <h3>
                             Naruto Anime
-                        </h1>
+                        </h3>
                         <p>
                             In the very popular Naruto and Naruto Shippuden anime, Itachi is the older brother of main character Sasuke.
                             <br><br>
@@ -80,9 +82,9 @@
                     <div class="iframe-wrapper">
                         <iframe src="https://www.youtube.com/embed/zhxtBW0HIbc?start=24" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                     <div class="about-textbox">
-                        <h1>
+                        <h3>
                             ITACHIS STORY
-                        </h1>
+                        </h3>
                         <p>
                             In the series fictional timeline, powerful ninja clans and villages compete for power.
                             <br><br>
@@ -95,9 +97,9 @@
                         <iframe src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="about-textbox">
-                        <h1>
+                        <h3>
                             ITACHIS MOTIVES
-                        </h1>
+                        </h3>
                         <p>
                             Itachi shows his memories to his younger brother, in order to explain his actions.
                             <br><br>
@@ -112,9 +114,9 @@
                         <iframe src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="about-textbox">
-                        <h1>
+                        <h3>
                             HERO / VILLAIN ?
-                        </h1>
+                        </h3>
                         <p>
                             Despite revealing his good intentions to the viewers, Itachi is still judged harshly by many.
                             <br><br>
@@ -127,7 +129,7 @@
             <section class="page" id="episodes">
                 <div class="page-title-container">
                     <div class="page-title">
-                        <h1>Episodes</h1>
+                        <h2>Episodes</h2>
                         <p>
                             Check out the list below for episodes that Itachi appeared in.
                         </p>
@@ -137,7 +139,7 @@
                     <table>
                         <thead>
                             <tr>
-                                <th colspan="3"><h1>Naruto</h1></th>
+                                <th colspan="3" class="table-head">Naruto</th>
                             </tr>
                             <tr>
                                 <th>From<br>Episode</th>
@@ -168,7 +170,7 @@
                     <table>
                         <thead>
                             <tr>
-                                <th colspan="3"><h1>Naruto Shippuden</h1></th>
+                                <th colspan="3" class="table-head">Naruto Shippuden</th>
                             </tr>
                             <tr>
                                 <th>From<br>Episode</th>
