added font awesome icons and link text to footer section. Styled footer elements with new h4 headings level.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         </a>
     </main>
     <footer>
+        <h4><i class="fa-solid fa-book-open"></i> Read manga</h4>
+        <h4><i class="fa-solid fa-play"></i> Watch anime</h4>
     </footer>
+    <!--Font awesome kit code-->
+    <script src="https://kit.fontawesome.com/643821d095.js" crossorigin="anonymous"></script>
 </body>
 </html>
