Completed footer element styling and corrected height. added fontawesome logos.

--- a/mainsite.html
+++ b/mainsite.html
@@ -241,8 +241,12 @@
         </main>
     </div>
     <footer>
-        <h4><i class="fa-solid fa-book-open"></i> Read manga</h4>
-        <h4><i class="fa-solid fa-play"></i> Watch anime</h4>
+        <div id="footer-left">
+            <h4>Read manga <i class="fa-solid fa-book-open"></i></h4>
+        </div>
+        <div id="footer-right">   
+            <h4><i class="fa-solid fa-play"></i> Watch anime</h4>
+        </div>
     </footer>
     <!--Font awesome kit code-->
     <script src="https://kit.fontawesome.com/643821d095.js" crossorigin="anonymous"></script>
