touch up on final styling, transitions on link hover in footer.

--- a/mainsite.html
+++ b/mainsite.html
@@ -31,7 +31,7 @@
                     </li>
                     <li>
                         <a href="#intro">
-                            Introduction
+                            Background
                         </a>
                     </li>
                 </ul>
@@ -47,8 +47,8 @@
                     </h2>
                     <p>
                         Uchiha Itachi is a fictional character who appeared in the popular Manga and Anime series Naruto and Naruto Shippuden.
-                        <br>
-                        The iconic character poses a moral dilemma for viewers as he is guilty of slaughtering his entire clan, only with the exception of his younger brother Sasuke.
+                        <br><br>
+                        Learn more about him through the content below or check out the full series linked in the footer section.
                     </p>
                 </div>
             </div>
