--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
     </main>
     <footer>
         <div id="footer-left">
-            <h4>Read manga <i class="fa-solid fa-book-open"></i></h4>
+            <a href="https://narutoshippuden.online/" target="_blank">
+                <h4>Read manga <i class="fa-solid fa-book-open"></i></h4>
+            </a>
         </div>
         <div id="footer-right">   
-            <h4><i class="fa-solid fa-play"></i> Watch anime</h4>
+            <a href="https://www.crunchyroll.com/search?q=naruto" target="_blank">
+                <h4><i class="fa-solid fa-play"></i> Watch anime</h4>
+            </a>
         </div>
     </footer>
     <!--Font awesome kit code-->
