background pushed down, iframes max width

--- a/mainsite.html
+++ b/mainsite.html
@@ -64,64 +64,66 @@
                         <p>Learn more about Uchiha Itachi from the video material below.</p>
                     </div>
                 </div>
-                <div class="video-card">
-                    <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/oE3Ty5YRXiw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                    <div class="about-textbox">
-                        <h3>
-                            Naruto Anime
-                        </h3>
-                        <p>
-                            In the very popular Naruto and Naruto Shippuden anime, Itachi is the older brother of main character Sasuke.
-                            <br><br>
-                            To get an understanding of the context, watch this fan made trailer.
-                        </p>
+                <div id="about-itachi-container">
+                    <div class="video-card">
+                        <div class="iframe-wrapper">
+                            <iframe src="https://www.youtube.com/embed/oE3Ty5YRXiw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                        <div class="about-textbox">
+                            <h3>
+                                Naruto Anime
+                            </h3>
+                            <p>
+                                In the very popular Naruto and Naruto Shippuden anime, Itachi is the older brother of main character Sasuke.
+                                <br><br>
+                                To get an understanding of the context, watch this fan made trailer.
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="video-card">
-                    <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/zhxtBW0HIbc?start=24" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                    <div class="about-textbox">
-                        <h3>
-                            ITACHIS STORY
-                        </h3>
-                        <p>
-                            In the series fictional timeline, powerful ninja clans and villages compete for power.
-                            <br><br>
-                            Itachi grows up as a member of the renowned hidden leaf villages most prominent clan "The Uchiha".
-                        </p>
+                    <div class="video-card">
+                        <div class="iframe-wrapper">
+                            <iframe src="https://www.youtube.com/embed/zhxtBW0HIbc?start=24" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                        <div class="about-textbox">
+                            <h3>
+                                ITACHIS STORY
+                            </h3>
+                            <p>
+                                In the series fictional timeline, powerful ninja clans and villages compete for power.
+                                <br><br>
+                                Itachi grows up as a member of the renowned hidden leaf villages most prominent clan "The Uchiha".
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="video-card">
-                    <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="video-card">
+                        <div class="iframe-wrapper">
+                            <iframe src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="about-textbox">
+                            <h3>
+                                ITACHIS MOTIVES
+                            </h3>
+                            <p>
+                                Itachi shows his memories to his younger brother, in order to explain his actions.
+                                <br><br>
+                                Until this moment in the series, Itachi is portrayed as a brutal murderer and villain.
+                                <br><br>
+                                A popular youtube meme is to record the reactions to this revealing as it is often deeply emotional for the fans.
+                            </p>
+                        </div>
                     </div>
-                    <div class="about-textbox">
-                        <h3>
-                            ITACHIS MOTIVES
-                        </h3>
-                        <p>
-                            Itachi shows his memories to his younger brother, in order to explain his actions.
-                            <br><br>
-                            Until this moment in the series, Itachi is portrayed as a brutal murderer and villain.
-                            <br><br>
-                            A popular youtube meme is to record the reactions to this revealing as it is often deeply emotional for the fans.
-                        </p>
-                    </div>
-                </div>
-                <div class="video-card">
-                    <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                    <div class="about-textbox">
-                        <h3>
-                            HERO / VILLAIN ?
-                        </h3>
-                        <p>
-                            Despite revealing his good intentions to the viewers, Itachi is still judged harshly by many.
-                            <br><br>
-                            Was he a dark knight bearing a painful burden for the sake of peace, or a selfish rogue only interested in himself and his younger brother?
-                        </p>
+                    <div class="video-card">
+                        <div class="iframe-wrapper">
+                            <iframe src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="about-textbox">
+                            <h3>
+                                HERO / VILLAIN ?
+                            </h3>
+                            <p>
+                                Despite revealing his good intentions to the viewers, Itachi is still judged harshly by many.
+                                <br><br>
+                                Was he a dark knight bearing a painful burden for the sake of peace, or a selfish rogue only interested in himself and his younger brother?
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
